refactor: refactored the DangerService